# gelos-lc-datagen

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  aois.geojson  cleaner.py  compose.yml  config-test.yml  config.yml  environment.yml  main.ipynb  main.py  pixi.toml  pyproject.toml  utils.py
.github/: copilot-instructions.md
data/: all_aois.geojson  map_v0.1.geojson  map_v0.20.geojson  map_v0.40.geojson  s2_wcd_fires.csv  urbans.geojson
data/raw/: map_v0.30.geojson
data/sample_chips_v0.40.7/: chip_metadata.csv  chip_metadata.json  dem_000012.tif  dem_000019.tif  dem_000020.tif  dem_000021.tif  dem_000022.tif  dem_000023.tif  dem_000024.tif  dem_000025.tif  dem_000026.tif  dem_000027.tif  dem_000034.tif  dem_000035.tif  dem_000037.tif  dem_000041.tif  dem_000048.tif  dem_000050.tif  dem_000052.tif  dem_000053.tif  dem_000056.tif  dem_000059.tif  dem_000060.tif  (+679 more)
docs/: PRD.md
notebooks/: 00_downloader.ipynb  00_lc_data_generation.ipynb  00_lc_generation.ipynb  01_lc_data_cleaning.ipynb  02_0_fire_generation.ipynb  02_fire_generation.ipynb  03_visualize_errors.ipynb  04_save_s1_arrays.ipynb  05_extract_wildfire_events.ipynb  caleb-chipgen.ipynb  config.yml  data_cleaning.ipynb  fire_events.ipynb  fire_visualization.ipynb  gelos_fire_data.ipynb  glob_fire_events.ipynb  main.ipynb  s2_wcd_fire_generation.ipynb  sen12floods.ipynb
output/: cleaned_df.csv
src/: aoi_processor.py  chip_generator.py  data_cleaner.py  data_cleaning.py  download_test.ipynb  downloader.py  gelos_config.py  globfire_filter.py  lc_generation.py  utils.py
(+963 files in other folders)
